💚(frontend) fix frontend image vulnerabilities
Fixed vulnerabilities found by the Trivy Scan.

--- a/src/frontend/Dockerfile
+++ b/src/frontend/Dockerfile
@@ -32,7 +32,7 @@ WORKDIR /home/frontend
 RUN npm run build
 
 # ---- Front-end image ----
-FROM nginxinc/nginx-unprivileged:1.25 as frontend-production
+FROM nginxinc/nginx-unprivileged:1.26-alpine as frontend-production
 
 # Un-privileged user running the application
 ARG DOCKER_USER
